# smallangle

./: pyproject.toml  smallangle.bundle
src/smallangle/: smallangle.py
tests/: test_smallangle.py
