[tool.poetry]
name = "smallangle"
version = "0.1.0"
description = ""
authors = ["AnneliesVlaar <66774020+AnneliesVlaar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
numpy = "^1.26.2"
pandas = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
sin = "smallangle.smallangle:sin"
tan = "smallangle.smallangle:tan"
smallangle = "smallangle.smallangle:cmd_group"
